<resources>
    <string name="app_name">StoreManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="products">Products</string>
    <string name="please_choose_how_you_want_to_continue_setting_up_your_account">Please choose how you want to continue setting up your account</string>
    <string name="sign_up_and_start_selling">Sign up and start selling</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="store_name">Store name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_your_store">Create your store</string>
    <string name="category">Category</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="create_store">Create store</string>
    <string name="store_category">Store category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>