<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="tech.gamedev.storemanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_adminFragment"
            app:destination="@id/adminFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_product_manager"
        android:name="tech.gamedev.storemanager.ui.productmanager.ProductManagerFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_product_manager" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="tech.gamedev.storemanager.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="tech.gamedev.storemanager.ui.login.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/login_fragment" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />

    </fragment>
    <fragment
        android:id="@+id/adminFragment"
        android:name="tech.gamedev.storemanager.ui.admin.AdminFragment"
        android:label="fragment_admin"
        tools:layout="@layout/fragment_admin" />

</navigation>